--- a/_posts/Photogrammerty/2021-05-13-SVD.md
+++ b/_posts/Photogrammerty/2021-05-13-SVD.md
@@ -67,6 +67,12 @@ https://www.youtube.com/watch?v=K_EH2abOp00
 
 https://gyeo-ri.com/29
 
+
+### normal equation 증명
+
+![1](/assets/img/camera/210513/m.jpg)
+
+
 ---
 
 
