--- a/_posts/deep_learning/2021-05-31-FID.md
+++ b/_posts/deep_learning/2021-05-31-FID.md
@@ -124,11 +124,11 @@ IS는 생성된 이미지의 품질을 평가할 때 다음 두 가지를 고려
 
 2. Diversity
 
-    Fidelity는, P(y|x)에 해당한다.
+    Fidelity는, P(yㅣx)에 해당한다.
 
     x는 생성된 이미지, y는 label이다.
 
-    GAN에서는 P(y|x)가 높기를, 즉 생성된 이미지를 보고 class(label)를 예측하기 쉬워야 한다.
+    GAN에서는 P(yㅣx)가 높기를, 즉 생성된 이미지를 보고 class(label)를 예측하기 쉬워야 한다.
 
     엔트로피 측면에서 보면, 엔트로피가 낮은(uniform distribution이 아닌 쏠림형) 일 것이다.
 
@@ -138,7 +138,7 @@ IS는 생성된 이미지의 품질을 평가할 때 다음 두 가지를 고려
 
 ![설명](/assets/img/Deep_learning/210531/9.PNG)
 
-    만약 x가 생성한 모든 y의 분포를 보았을 때 uniform하다면 entrophy가 높을 것이다.
+만약 x가 생성한 모든 y의 분포를 보았을 때 uniform하다면 entrophy가 높을 것이다.
 
 이를 그림으로 표현하면 다음과 같다.
 
