--- a/_posts/deep_learning/2021-05-31-FID.md
+++ b/_posts/deep_learning/2021-05-31-FID.md
@@ -145,7 +145,7 @@ IS는 생성된 이미지의 품질을 평가할 때 다음 두 가지를 고려
 
 ![설명](/assets/img/Deep_learning/210531/10.PNG)
 
-KL divergence는 두 분포 (p(y|x), p(y))가 닮은 분포이면 낮은 값, 다르면 높은 값이 나온다.
+KL divergence는 두 분포 (p(yㅣx), p(y))가 닮은 분포이면 낮은 값, 다르면 높은 값이 나온다.
 
 Fidelity는 쏠림형, Diversity는 unifrom형으로 분포가 나오는 것이 최적의 경우이므로 만약 생성된 이미지가 결과가 좋으면 KL divergence의 기대값이 높을 것이고, IS 역시 높을 것이다.
 
