--- a/_posts/deep_learning/2021-05-31-FID.md
+++ b/_posts/deep_learning/2021-05-31-FID.md
@@ -149,7 +149,7 @@ KL divergence는 두 분포 (p(yㅣx), p(y))가 닮은 분포이면 낮은 값, 
 
 Fidelity는 쏠림형, Diversity는 unifrom형으로 분포가 나오는 것이 최적의 경우이므로 만약 생성된 이미지가 결과가 좋으면 KL divergence의 기대값이 높을 것이고, IS 역시 높을 것이다.
 
-### IS의 특징
+### 3-1 IS의 특징
 * IS는 FID와 달리 Fully connected layer를 사용한다. (class predict를 해야 하므로)
 
 * 생성된 이미지 만을 평가한다(real 이미지와 비교 불가능)
