--- a/_posts/deep_learning/2021-06-20-SVM.md
+++ b/_posts/deep_learning/2021-06-20-SVM.md
@@ -178,7 +178,7 @@ h(x, y, z) = 0
 
 ![1](/assets/img/Deep_learning/210620/18.PNG)
 
-1. f =  λ∇g
+1. ∇f =  λ∇g
 
 2. constraint : g(x) <= 0
 
@@ -250,3 +250,225 @@ f, g의 부호가 반대임을 표시하려면
 위 조건을 KKT condition이라 부른다.
 
 f(x)를 minmize한다는것에 꼭 주목.. maximize이면 부호 반대. 
+
+9.1
+## 4. SVM
+앞서, margin을 최대화 하는 방식으로 boundary를 정한다라고 하였다.
+
+이를 위해
+
+1. 수학적으로 margin을 표현
+
+2. 미분을 통해 margin을 최대화
+
+하는 과정을 하려 한다.
+
+먼저, 1을 살펴볼 것인데, 이때 data는 linearly seperable하다고 하자.
+
+
+![1](/assets/img/Deep_learning/210620/24.PNG)
+
+
+새로운 data x = (x1, x2)가 들어오면, h(x) boundary에 대입하여, x>0이면 위쪽, x<0이면 아래쪽 으로 분류한다.
+
+이때 w의 graphically meaning을 살펴보자.
+
+이 w는, 해당 h(x) hyperplane에 수직인 벡터(normal vector)를 의미한다.
+
+ 
+![1](/assets/img/Deep_learning/210620/26.PNG)
+
+또한 w는, 특정 값만 갖는게 아니라 k값에 따라 다음과 같은 두 식으로 표현 가능하다.
+
+다시말해 어떤 값으로 k값을 정하든, final result에는 영향이 없다.
+
+만약 h(x) 외부의 특정 점 x0의 h(x0)값이 특정 값 h0을 갖고자 하면, 이 때 만족하는 w는 딱 하나밖에 없다. 
+
+이 h(x)식을 h0로 나누면 깔금하게 표현할 수 있다.
+ 
+### 4-1. margin의 mathmetically하게 표현하기
+
+x' = h(x) 위의 점, x = h(x) 외부의 점
+
+h(x) 외부의 점 x에서 직선까지의 거리는, 다음과 같이 d를 통해 나타낼 수 있다.
+
+![1](/assets/img/Deep_learning/210620/27.PNG)
+(혼자 해보기)
+![1](/assets/img/Deep_learning/210620/28.PNG)
+
+뜻 : 외부의 점 x를 내 hyperplane식에 넣고, normal vector 크기로 나누어준것.
+
+이는 곧 boundary로부터 support vector까지의 거리를 구할수 있다와 동치이다.
+
+
+이에 대한 예는 다음과 같다.
+
+![1](/assets/img/Deep_learning/210620/29.PNG)
+(교수님 실수한듯 (18/7 임)) 
+
+![1](/assets/img/Deep_learning/210620/30.PNG)
+
+이제 외부의 점 과 h(x)와의 거리를 알았고 margin으로 표현해주면 다음과 같은데, 이 margin을 최대화 해주면 끝나는걸까? -> x
+
+h(x) = 0인 hyperplane이 위 슬라이드처럼 엄청 많이 나올것이고 우리는 그중 classify를 잘 하는 hyperplane이 필요하다.
+
+즉, 
+
+h(xi) > 0 when gi = 1
+
+h(xi) <> 0 when gi = -1
+
+이라는 h의 constraint 하에, margin을 maximize 해야한다.
+
+![1](/assets/img/Deep_learning/210620/31.PNG)
+
+h(xi) > h(x) (=딱 가운데에 있는 hyperplane) 보다 빡센 조건인 h(xi) > h(xs)(xs = upper bound support vector)를 기준으로 하자.
+
+yi = 1일 때, h(xi) > lh(xs)l를 
+
+yi = -1일 때, h(xi) < -lh(xs)l를 
+
+모든 xi에 대해 만족하는지를 살펴보고, 
+만족할 경우의 hyperplane만 boundary로 인정한다!
+
+이 조건을 한줄로 표현하면, 다음과 같다.
+
+![1](/assets/img/Deep_learning/210620/32.PNG)
+
+저 두 부등식에 yi만 곱해주면, 한줄로 표현이 가능하다.
+
+저 한 줄을 constraint로 가질 때, margin을 최대화 시켜주는 h(x)를 찾으면 된다.
+
+![1](/assets/img/Deep_learning/210620/33.PNG)
+
+
+이제 constraint, f(x)가 모두 정해졌으니 라그랑쥬 승수법을 쓸 수 있게 되었다.
+
+![1](/assets/img/Deep_learning/210620/34.PNG)
+
+만약, h(xs)가 1이 되도록 xs 값을 정하면, w도 이에 맞게 fit 될 것이고(이는 결과에 아무런 영향x, 4-0 참고) 식이 매우 간단해질 것이다.
+
+9.2
+### 5. KKT condition과 라그랑쥬 승수법
+![1](/assets/img/Deep_learning/210620/42.PNG)
+
+![1](/assets/img/Deep_learning/210620/35.PNG)
+
+
+1. ∇f =  λ∇g(auxiliary form 으로 나타낼 시 ∇w,b,mL = 0)
+
+2. constraint : g(x) <= 0
+
+에 더하여, 
+
+3. mg(x*) = 0
+
+4. m >= 0 
+
+조건을 만족하도록 SVM을 진행할 차례이다.
+
+![1](/assets/img/Deep_learning/210620/36.PNG)
+
+
+
+이 때 수학적 편의성을 위해 f(x), constraint를 다음금과 같은 꼴로 바꾸어준다.
+
+따라서 L(auxiliary function)은 다음과 같다.
+
+우리가 정해야 하는 parameter는, m, w 그리고 b 이다.
+
+∇w,b,mL = 0  그리고 KKT condition을 만족시키는 w, b를 구할 것이다.
+
+L을 w, b, ml에 대해 편미분 했을 때 (0, 0, 0)을 만족하는 점이 llwll/2를 minimize하는 점일 것이다.
+
+#### 5-1 w,b에 대해서 편미분 하기
+
+m = 아직 안정해 졌으므로 variable이다.
+
+w, b에 대해 L을 편미분하여 다음과 같은  ∇w,b = 0으로 만들어주는 optimal한 w, b일 것이다.
+
+그 다음 m로 편미분 하기 전에, KKT condition을 따져보면,
+
+mi >= 0이어야 한다.
+
+    조건 1 : m = 0일때에는 constraint가 f(x)에 영향을 미치지 x
+
+    조건 2 : m > 0일 경우에는 optimal point x에서 g(x)=0
+
+support vector는, 1 = h(xs)를 만족시키는 점이다.
+
+즉 조건 2 : g(x) = 0 를 만족시키는게 support vector이다.
+
+다시말해
+
+조건 1 :m = 0을 만족시키는 경우는 support vector가 아닌 vector들의 경우이고, 
+
+조건 2 : m > 0을 만족시키는 경우는 g(x) = 0인 support vector인 경우이다.
+
+![1](/assets/img/Deep_learning/210620/37.PNG)
+
+(조건 4개 보기)
+
+∇w,bL = 0 을 이용하여, 즉 w와 b를 이용하여, L을 좀 더 간략한 형태로 만든 모습 이다.
+
+![1](/assets/img/Deep_learning/210620/38.PNG)
+
+이제 저 L을, m에 대해 편미분하여 =0꼴로 만들어주는 m을 구하면 된다,
+
+![1](/assets/img/Deep_learning/210620/39.PNG)
+
+
+이제 optimal한 m을 구했다고 하면, w,b를 알 수 있다.
+
+![1](/assets/img/Deep_learning/210620/40.PNG)
+
+
+support vector가 아닌 벡터들 : mi = 0
+
+support vector들 : mi > 0 (mg(x) = 0에서 g(x) = 0)
+
+따라서 g(x) = 0을 통해 b를 구할 수 있다.
+
+만약 support vector가 3개라면, b는 그 값들을 평균내준 값이다.(마지막 줄)
+
+m를 통해 optimal한 w, b를 구했으니, hyperplane을 구했다고 할 수 있다.
+
+![1](/assets/img/Deep_learning/210620/41.PNG)
+
+이제 구한 이 h(x)를 가지고, classify를 진행할 수 있다.
+
+
+9-3
+## 6. SVM with kernel trick
+
+### 6-1. margin
+
+hard margin일수록 outlier에 엄격하고,
+
+soft margin일수록 outlier에 관대하다.
+
+![1](/assets/img/Deep_learning/210620/43.PNG)
+
+1, 2의 경우엔, 그래도 inlier인 경우이지만 3은 확실히 outlier인 경우이다.
+
+이 떄 크사이를 이용해 어느정도 outlier에 대해 용인해 준다.
+
+그 때, 허용 하더라도 최소화 하는 크사이를 찾는 과정은 다음과 같다.
+0<= 크사이 < 1
+
+![1](/assets/img/Deep_learning/210620/44.PNG)
+
+
+크사이를 minimize term(object function)에 넣어버리 최소화하는 크사이를 찾을 수 있다.
+
+C는 내가 크사이를 얼마나 허용할 것이냐 의 term이다.
+
+C가 클수록, 크사이가 조금만 커져도 objective function이 커진다.
+
+따라서 outlier에 민감해 진다 라고 볼 수 있다(hard margin)
+
+### 6-1. kernel trick
+
+![1](/assets/img/Deep_learning/210620/45.PNG)
+
+optimal한 w, b를 구할 때 term인 L(m)에서, xj^T * xj를 kernel function을 통해 고차원 매피오딘 효과를 낸 식이다.
